--- a/modules/swagger-codegen/src/main/resources/hellofreshphp/api.mustache
+++ b/modules/swagger-codegen/src/main/resources/hellofreshphp/api.mustache
@@ -38,11 +38,11 @@ class {{classname}} extends AbstractHelloFreshPurpose
             ];
         }
 
-        $response = $this->client->{{lcHttpMethod}}('{{path}}', $options);
         {{#returnType}}
-        $response->setModel(Deserializer::deserialize('{{returnType}}', $response));
+        $options[$this->client::RESPONSE_MODEL] = '{{returnType}}';
         {{/returnType}}
-        return $response;
+
+        return $this->client->{{lcHttpMethod}}('{{path}}', $options);
     }
 
 {{/operation}}
